Fix different class names index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="track-details">
 	<div class="current-status">PLAYING x OF y</div>
-	<div class="track-image"></div>
-	<div class="track-title">Track Name</div>
+	<div class="track-art"></div>
+	<div class="track-name">Track Name</div>
 	<div class="track-artist">Track Artist</div>
 	</div>
 
